src/app/contact/contact.component.scss
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

.all {
  display: flex;
  justify-content: center;
  flex-direction: column;
  overflow: hidden;
  min-width: 100vw;
}

.purple-circle-segment {
  margin-top: 55px;
  width: 600px;
  margin-left: -150px;
  margin-top: -40px;
  height: auto;
}

.contact-form-wrapper {
  background-color: #33303f;
  border-radius: 16px;
  box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.1);
  width: 90vw;
  margin: auto;
  margin-top: 200px;
  display: flex;
  align-items: center;
  flex-direction: column;
  padding: 32px 16px 44px;
  max-width: 416px;
  min-width: 328px;
}

.header1 {
  margin-top: -300px;
  padding: 20px;
  font-size: 24px;
}

.subheader {
  font-size: 20px;
  color: #b0b0b0;
  padding-top: 10px;
}

.stripes-top {
  width: 90px;
  height: auto;
  top: 315px;
  left: 20px;
  position: absolute;
}

.contact-input {
  background-color: #281b32;
  border: 1px solid #ad00ff;
  margin-top: 20px;
  margin-bottom: 20px;
  width: 98%;
  height: 48px;
  border-radius: 7px;
  color: white;
  outline: none;
  font-size: 16px;
}

.contact-input:-webkit-autofill,
.conatct-input:-webkit-autofill:focus {
  transition: background-color 600000s 0s, color 600000s 0s;
}

.message-input {
  background-color: #281b32;
  border: 1px solid #ad00ff;
  border-radius: 7px;
  height: 200px;
  margin-top: 20px;
  width: 98%;
  color: #e3e1de;
  vertical-align: top;
  text-align: left;
  resize: none;
  outline: none;
  font-family: "Source Sans 3";
}

.checkbox-text {
  height: 117px;
  color: #adadad;
  font-size: 12px;
  line-height: 16px;
  margin-top: 18.5px;
}

.checkbox {
  margin-right: 12.5px;
  margin-top: 19.5px;
  accent-color: #ad00ff;
}

.statement {
  display: flex;
  flex-direction: row;
  width: 100%;
  margin-top: 20px;
}

.send-a-message-button {
  width: 90%;
  height: 53px;
  left: calc(50% - 292.33px / 2 - 0.84px);
  top: 679px;
  border: none;
  background: #ac00ff;
  border-radius: 60px;
  color: white;
  font-family: "Source Sans 3";
  font-style: normal;
  font-weight: 700;
  font-size: 15px;
  line-height: 21px;
  letter-spacing: 0.05em;
  margin: 0 auto;
  margin-bottom: 20px;
}

.purple-input {
  width: 100%;
}

.here-we-are {
  .background {
    overflow: hidden;
    margin-bottom: -50px;
  }

  .here-we-are-container {
    background-color: rgba(35, 23, 45, 255);
    margin-top: 100px;
    height: 520px;
    background-color: #25192e;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .purple-rounder-top {
    width: 100vw;
    margin-top: 180px;
    margin-bottom: -105px;
  }

  .here-we-are-header {
    font-size: 24px;
    text-align: center;
    margin-top: 36px;
    margin-bottom: 36px;
  }

  .rectangle {
    width: 6vw;
    min-width: 80px;
    max-width: 120px;
    height: auto;
    padding-left: 3vw;
  }

  .address {
    text-align: center;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    margin-bottom: 36px;
  }

  .text {
    text-align: center;
  }

  .rounder {
    width: 101vw;
    margin-top: -7%;
    min-height: 100%;
    margin-bottom: 44px;
  }
}

.above-here-we-are-wrapper {
  width: 100vw;
  display: flex;
  justify-content: center;
}

.position-wrapper {
  display: flex;
  flex-direction: column;
  margin-top: -70px;
}

.map-wrapper-mobile {
  border-radius: 9px;
  width: 327px;
  height: 206px;
  overflow: hidden;
  margin-top: 40px;
  align-items: center;
  display: flex;
  justify-content: flex-end;
  align-items: flex-start;
  z-index: 10;
}

.map-wrapper-desktop {
  display: none;
}

@media screen and (min-width: 600px) {
  .position-wrapper {
    flex-direction: row;
    margin-top: -200px;
    align-items: center;
    justify-content: center;
  }

  div.map-wrapper-mobile {
    margin-right: 112px;
  }

  .here-we-are-header {
    font-size: 48px !important;
  }
}

@media screen and (min-width: 1024px) {
  img.rectangle {
    width: 8vw;
  }
  .purple-circle-segment {
    margin-top: 55px;
    width: 1717px;
    margin-left: -100px;
    margin-top: -297px;
    height: auto;
  }

  div.map-wrapper-mobile {
    display: none;
  }

  div.map-wrapper-desktop {
    display: flex;
    border-radius: 9px;
    width: 504px;
    height: 317px;
    overflow: hidden;
    margin-top: 40px;
    justify-content: center;
    align-items: center;
    margin-right: 112px;
  }

  .header1 {
    margin-top: -630px;
    padding: 60px;
    font-size: 40px;
    padding-top: 0;
  }
  .above-here-we-are {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: -700px;
  }
  .contact-form-wrapper {
    min-width: 416px;
    margin-top: 100px;
    margin: 60px;
  }
  .stripes-top {
    left: 150px;
    top: -200px;
    position: relative;
  }
}

@media screen and (min-width: 1700px) {
  .position-wrapper {
    margin-top: -15%;
  }
}

